# SpeedDometer

./: CMakeLists.txt  README.md
client/desktop/: main.cpp
client/desktop/include/: canvas.h  comservice.h  tcpservice.h  uartcom.h  window.h
client/desktop/src/: canvas.cpp  comservice.cpp  tcpservice.cpp  uartcom.cpp  window.cpp
client/esp32/: platformio.ini
client/esp32/src/: main.cpp
server/desktop/: main.cpp
server/desktop/include/: comservices.h  dialog.h  tcpservices.h  uartcoms.h
server/desktop/src/: comservices.cpp  dialog.cpp  tcpservices.cpp  uartcoms.cpp
server/esp32/src/: main.cpp
shared/: setting.h
